compiler/testData/diagnostics/tests/backingField/ReadNonexistentAbstractPropertyInFunction.kt
abstract class ReadNonexistent {
    abstract val aa: Int
    
    fun ff() = <!NO_BACKING_FIELD_ABSTRACT_PROPERTY!>$aa<!>
}
